--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/image-url": "^1.0.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "js-cookie": "^3.0.1",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
