--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-connect": "^0.13.0",
     "notistack": "^2.0.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.4"
   }
 }
