--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.0.3",
     "next-connect": "^0.13.0",
     "notistack": "^2.0.8",
