--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "axios": "^1.1.3",
